added sctions page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,163 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>EmotiTrack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>EmotiTrack - Encuentra tu equilibrio emocional</title>
+    <meta name="description" content="Tu guía personal para entender tus emociones y construir un bienestar duradero. Registra tu día y descubre el camino hacia una mente más clara.">
+    <meta name="keywords" content="emotitrack, salud mental, bienestar emocional, mindfulness, app salud, meditación, registro emocional">
+    <meta name="author" content="WellTech Solutions">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://emoti-track.netlify.app/">
+    <meta property="og:title" content="EmotiTrack - Encuentra tu equilibrio emocional">
+    <meta property="og:description" content="Tu guía personal para entender tus emociones y construir un bienestar duradero. Empieza a registrar tu día y descubre el camino hacia una mente más clara.">
+    <meta property="og:image" content="https://emoti-track.netlify.app/images/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="EmotiTrack - App de bienestar emocional">
+    <meta property="og:site_name" content="EmotiTrack">
+    <meta property="og:locale" content="es_ES">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://emoti-track.netlify.app/">
+    <meta name="twitter:title" content="EmotiTrack - Encuentra tu equilibrio emocional">
+    <meta name="twitter:description" content="Tu guía personal para entender tus emociones y construir un bienestar duradero.">
+    <meta name="twitter:image" content="https://emoti-track.netlify.app/images/twitter-card.jpg">
+    <meta name="twitter:image:alt" content="EmotiTrack - App de bienestar emocional">
+    <meta name="twitter:creator" content="@emotitrack">
+    <meta name="twitter:site" content="@emotitrack">
+
+    <link rel="icon" type="image/webp" sizes="32x32" href="./assets/images/logo.webp">
+    <link rel="icon" type="image/webp" sizes="16x16" href="./assets/images/logo.webp">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/logo.webp">
+
+    <link rel="stylesheet" href="./styles/global.css">
 </head>
 <body>
-    <h1>EmotiTrack</h1>
+<header>
+    <nav class="container">
+        <div class="logo">
+            <img src="./assets/images/logo.webp" alt="">
+            <div>
+                <strong>WellTech</strong><br>
+                <small>Solutions</small>
+            </div>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#beneficios">Beneficios</a></li>
+            <li><a href="#como-funciona">Cómo funciona</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+        <a href="#" class="btn-download-header">Descargar App</a>
+    </nav>
+</header>
+
+<section class="hero container">
+    <div class="hero-content">
+        <h1>Encuentra tu equilibrio emocional con <strong>EmotiTrack</strong></h1>
+        <p>Tu guía personal para entender tus emociones y construir un bienestar duradero. Empieza a registrar tu día y descubre el camino hacia una mente más clara y un corazón sereno.</p>
+        <div class="hero-buttons">
+            <a href="#" class="btn-primary">Descargar en App Store</a>
+            <a href="#" class="btn-secondary">Disponible en Google Play</a>
+        </div>
+    </div>
+    <div class="hero-image">
+        <div class="phone-mockup">
+            <img src="./assets/images/photos-app.webp" alt="">
+        </div>
+    </div>
+</section>
+
+<section id="beneficios" class="benefits container">
+    <h2>Descubre los beneficios de EmotiTrack</h2>
+    <p class="benefits-subtitle">Descubre cómo EmotiTrack puede ayudarte a comprender y gestionar tus emociones, fomentando una vida más saludable y feliz.</p>
+
+    <div class="benefits-grid">
+        <div class="benefit-card">
+            <div class="benefit-icon icon-heart">❤️</div>
+            <h3>Monitorea tu estado de ánimo</h3>
+            <p>Registra fácilmente tus estados de ánimo diarios y patrones de comportamiento de forma intuitiva.</p>
+        </div>
+        <div class="benefit-card">
+            <div class="benefit-icon icon-smile">😊</div>
+            <h3>Información personalizada</h3>
+            <p>Recibe consejos y recursos personalizados según tus tendencias emocionales únicas.</p>
+        </div>
+        <div class="benefit-card">
+            <div class="benefit-icon icon-users">👥</div>
+            <h3>Conecta con la comunidad</h3>
+            <p>Únete a una comunidad de apoyo de usuarios que comparten tus experiencias.</p>
+        </div>
+        <div class="benefit-card">
+            <div class="benefit-icon icon-chart">📈</div>
+            <h3>Seguimiento del progreso</h3>
+            <p>Monitorea tu progreso emocional y celebra tus logros con el tiempo.</p>
+        </div>
+    </div>
+</section>
+
+<section id="como-funciona" class="how-it-works">
+    <div class="container">
+        <h2>Cómo funciona</h2>
+        <p class="how-it-works-subtitle">Descubre mensajes inspiradores y consejos prácticos para cultivar el bienestar emocional y la resiliencia en tu día a día.</p>
+
+        <div class="steps-grid">
+            <div class="step-card">
+                <div class="step-icon">😊</div>
+                <h3>Agradece cada día</h3>
+                <p>Tómate un momento para reconocer las cosas buenas de tu vida.</p>
+            </div>
+            <div class="step-card">
+                <div class="step-icon">🌬️</div>
+                <h3>Respira profundamente</h3>
+                <p>Cuando te sientas abrumado, inhala y exhala lentamente.</p>
+            </div>
+            <div class="step-card">
+                <div class="step-icon">🏃</div>
+                <h3>Muévete un poco</h3>
+                <p>El ejercicio libera endorfinas, las hormonas de la felicidad.</p>
+            </div>
+            <div class="step-card">
+                <div class="step-icon">💙</div>
+                <h3>Sé amable contigo</h3>
+                <p>Trátate con la misma compasión que le darías a un amigo.</p>
+            </div>
+            <div class="step-card">
+                <div class="step-icon">🤝</div>
+                <h3>Conecta con otros</h3>
+                <p>Llama a un ser querido o pasa tiempo con un amigo.</p>
+            </div>
+            <div class="step-card">
+                <div class="step-icon">💡</div>
+                <h3>Enfócate en el presente</h3>
+                <p>Practica la atención plena y vive el momento.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="contacto" class="contact container">
+    <h2>Ponte en Contacto</h2>
+    <p class="contact-subtitle">Nos encantaría saber de ti. Envíanos un mensaje.</p>
+
+    <form class="contact-form">
+        <div class="form-group">
+            <input type="text" placeholder="Tu nombre" required>
+        </div>
+        <div class="form-group">
+            <input type="email" placeholder="Tu correo electrónico" required>
+        </div>
+        <div class="form-group">
+            <textarea placeholder="Tu mensaje" required></textarea>
+        </div>
+        <button type="submit" class="btn-submit">Enviar Mensaje</button>
+    </form>
+</section>
+
+<footer>
+    <p>©2025 EmotiTrack. Cultivando tu bienestar emocional.</p>
+</footer>
 </body>
 </html>
