added validation form

--- a/index.html
+++ b/index.html
@@ -160,5 +160,7 @@
 <footer>
     <p>©2025 EmotiTrack. Cultivando tu bienestar emocional.</p>
 </footer>
+
+<script src="./scripts/index.js"></script>
 </body>
 </html>
